auth endpoints added

--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ MYSQL_DATABASE=kitchy
 MYSQL_USER=manuel
 MYSQL_PASSWORD=12345
 MYSQL_ROOT_PASSWORD=root
+
+# Frontend configuration
+CORS_ORIGIN=http://localhost:5173
+
+# Session configuration
+SESSION_SECRET=your_session_secret
