--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "3.0.2",
     "cors": "2.8.5",
     "dotenv": "17.2.3",
     "express": "5.1.0",
+    "express-session": "1.18.2",
     "jsonwebtoken": "9.0.2",
     "morgan": "1.10.1",
     "mysql2": "3.15.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "3.1.10"
   }
 }
