--- a/.env
+++ b/.env
@@ -2,10 +2,14 @@ PORT=3000
 
 # Database configuration
 DB_HOST=kitchy_mysql
-DB_USER=root
-DB_PASSWORD=root
 DB_NAME=kitchy
 DB_PORT=3306
+#User
+DB_USER=root
+DB_PASSWORD=root
+#Admin
+DB_ADMIN_USER=admin
+DB_ADMIN_PASSWORD=admin123
 
 # Docker configuration
 MYSQL_DATABASE=kitchy
@@ -18,3 +22,11 @@ CORS_ORIGIN=http://localhost:5173
 
 # Session configuration
 SESSION_SECRET=your_session_secret
+
+# Application DB user (used by the app pool)
+DB_USER_APP=app_user
+DB_PASSWORD_APP=app_password
+
+# Admin DB user (used by the admin pool)
+DB_USER_ADMIN=admin_user
+DB_PASSWORD_ADMIN=admin_password
