--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,12 +8,12 @@ services:
     env_file:
       - .env
     depends_on:
-      - kitchy_mysql
+      - mysql
     volumes:
       - .:/app
       - /app/node_modules
 
-  kitchy_mysql:
+  mysql:
     image: mysql:8
     env_file:
       - .env
