--- a/example.env
+++ b/example.env
@@ -1,7 +1,7 @@
 PORT=3000
 
 # Database configuration
-DB_HOST=kitchy_mysql
+DB_HOST=mysql
 DB_NAME=kitchy
 DB_PORT=3306
 # Application DB user (used by the app pool)
