utf8mb4 desde el arranque para emojis e idiomas, configuracion de volumenes, etc.

--- a/example.env
+++ b/example.env
@@ -13,8 +13,9 @@ DB_USER_ADMIN=admin_user
 DB_PASSWORD_ADMIN=admin_password
 
 # Docker configuration
-MYSQL_DATABASE=kitchy
 MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=kitchy
+MYSQL_CHARSET=utf8mb4
 
 # Frontend configuration
 CORS_ORIGIN=http://localhost:5173
