--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -20,6 +20,8 @@ services:
     volumes:
       - mysql-data:/var/lib/mysql
       - ./data:/docker-entrypoint-initdb.d
+      - ./mysql-config:/etc/mysql/conf.d
+
 
 volumes:
   mysql-data:
